# textplot

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: build_graph.py  preprocess_with_spacy.py
examples/corpora/: war-and-peace.txt
examples/corpora/war-and-peace/: 0.txt  1.txt  10.txt  100.txt  1000.txt  1001.txt  1002.txt  1003.txt  1004.txt  1005.txt  1006.txt  1007.txt  1008.txt  1009.txt  101.txt  1010.txt  1011.txt  1012.txt  1013.txt  1014.txt  1015.txt  1016.txt  1017.txt  1018.txt  1019.txt  102.txt  1020.txt  1021.txt  1022.txt  1023.txt  1024.txt  1025.txt  1026.txt  1027.txt  1028.txt  1029.txt  103.txt  1030.txt  1031.txt  1032.txt  (+1117 more)
sandbox/: profiler.py  test_spacy.py  textplot.gitingest.txt  tokenizers.prof
test/matrix/: test_anchored_pairs.py  test_index.py  test_set_get.py
test/text/: test_corpus_loading.py  test_load_stopwords.py  test_most_frequent_terms.py  test_term_count_buckets.py  test_term_counts.py  test_tokenize.py  test_unstem.py
test/utils/: test_sort_dict.py  test_tokenize.py  test_window.py
textplot/: constants.py  graphs.py  helpers.py  matrix.py  plotting.py  text.py  tokenization.py  utils.py
