[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textplot"
version = "0.1.1"
description = "(Mental) maps of texts."
authors = [
    {name = "David McClure", email = "davidwilliammcclure@gmail.com"},
    {name = "Tannon Kew", email = "tannon.kew@uzh.ch"}
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "ipython",
    "scikit-learn",
    "numpy",
    "scipy",
    "matplotlib",
    "nltk",
    "networkx",
    "clint",
    "pytest",
    "click",
    "pyvis==0.3.2",
    "spacy==3.8.4",
    "gensim==4.3.3",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"
]



[project.scripts]
textplot = "textplot.__main__:textplot"

[tool.setuptools.packages]
find = {where = ["."]}

[tool.setuptools.package-data]
textplot = ["data/*"]

[tool.setuptools.exclude-package-data]
textplot = ["tests/*"]